# OpencvFace

./: CMakeLists.txt  FaceTracking.cpp  FaceTracking.h  main.cpp
